--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,12 +6,12 @@ server:
 wechat:
   config:
     #配置一个文字的模板ID
-    singleTemplateId:
+    singleTemplateId: FhfAvGRTeBWxc_OTftb4y-0_ZNnM_1Q_BFvyKHtNuDE
     template:
       #早安模板
       morningTemplate:
         #模板ID
-        templateId: 填写模板ID
+        templateId: miIxC_2yrNBnYV2DluSI5jh0xFL_d1Q5dO-A2IOiKFc
         #是否关注的用户全发送，ture为是，当值为ture时，sendOpenId 为排除发送对象的微信用户，当值为false为否，sendOpenId为发送对象的微信用户
         allSend: true
         filterOpenIds:
@@ -22,21 +22,21 @@ wechat:
             #早安话语
             title: 早上好呀呀鸭
             #你们的相遇时间
-            meetDate: '1996-06-18'
-            city: 广州
+            meetDate: '2021-11-14'
+            city: 广汉
             #居住地点，高德地图api下载查询 https://lbs.amap.com/api/webservice/download
-            cityCode: 440100
-            constellation: 双子座
+            cityCode: 510681
+            constellation: 白羊座
           #把‘填写你的需要特定配置的微信用户号’覆盖位微信用户ID，可以对照正确填写好的配置示例，多用户可以按照格式继续添加下去
-          填写你的需要特定配置的微信用户号:
+          ock786qvpGXiHWi1qmZegNKkRhhc:
             title: 早上好呀呀鸭
-            meetDate: '2021-08-11'
-            city: 肇庆
-            cityCode: 440600
-            constellation: 狮子座
+            meetDate: '2021-11-14'
+            city: 遵义
+            cityCode: 520300
+            constellation: 摩羯座
       #颜文字模板
       emoticonsTemplate:
-        templateId: 填写模板ID
+        templateId: 9RZgkdMeTuWIxZaJCB328ywEFeGpDJNQGVmImq8RB1k
         allSend: true
         filterOpenIds:
         parameter:
@@ -45,5 +45,5 @@ wechat:
 #发送者个人信息
 personal:
   info:
-    constellation: 双子座
+    constellation: 摩羯座
 
